crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__index__tests__dashboard_snapshot_loading_failed.snap
---
source: crates/rtf-orchestrator-ui/src/templates/index.rs
expression: render_fragment!(t.as_dashboard())
---

        
        

<p class="error-box">Could not load the current service status from the orchestrator.</p>
