crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__index__tests__runs_snapshot.snap
---
source: crates/rtf-orchestrator-ui/src/templates/index.rs
expression: "render_fragment!(index(\"\", \"\").as_runs())"
---








<table>
    <thead>
        <tr>
            <th>Name</th>
            <th>Status</th>
            <th>Initiated by</th>
            <th>Started</th>
        </tr>
    </thead>
    <tbody>
        
        <tr>
            <td><a href="/ui/run/00000000-0000-0000-0000-000000000001">my-test-run</a></td>
            <td><span class="status status--active">RUNNING</span></td>
            <td>someone@apollographql.com</td>
            <td>2024-03-15T12:00:00Z</td>
        </tr>
        
        
        
    </tbody>
</table>

<p class="muted">
    
    1-1 of 1
    
    
    
</p>
