crates/rtf-orchestrator-ui/src/templates/snapshots/rtf_orchestrator_ui__templates__index__tests__runs_snapshot_listing_failed.snap
---
source: crates/rtf-orchestrator-ui/src/templates/index.rs
expression: render_fragment!(t.as_runs())
---



<p class="error-box">Could not load recent runs from the orchestrator.</p>
